fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ code {
 
 nav{
   position:fixed;
+  z-index: 1;
   margin: 0;
   width: 100%;
   padding: 0 0 10px 0;
